--- a/_sources/labs/Lab 0 - Prerequisites.ipynb
+++ b/_sources/labs/Lab 0 - Prerequisites.ipynb
@@ -109,14 +109,14 @@
     "## Course materials on GitHub\n",
     "The course materials are available on GitHub, so that you can easily `pull` (download) the latest updates. We recommend [installing git](https://git-scm.com/book/en/v1/Getting-Started-Installing-Git) (if you haven't already), and then 'clone' the repository from the command line (you can also use a [GUI](https://desktop.github.com/))\n",
     "\n",
-    "    git clone https://github.com/ML-course/master.git\n",
+    "    git clone https://github.com/ahmed14117/ml_course.git\n",
     "    \n",
     "To download updates, run `git pull`\n",
     "    \n",
     "For more details on using git, see the [GitHub 10-minute tutorial](https://guides.github.com/activities/hello-world/\n",
     ") and [Git for Ages 4 and up](https://www.youtube.com/watch?v=1ffBJ4sVUb4). We'll use git extensively in the course (e.g., to submit assignments).\n",
     "\n",
-    "Alternatively, you can download the course [as a .zip file](https://github.com/ML-course/master.git). Click 'Code' and then 'Download ZIP'. Or, download individual files with right-click -> Save Link As..."
+    "Alternatively, you can download the course [as a .zip file](https://github.com/ahmed14117/ml_course.git). Click 'Code' and then 'Download ZIP'. Or, download individual files with right-click -> Save Link As..."
    ]
   },
   {
