--- a/_sources/labs/Lab 1 - Tutorial.ipynb
+++ b/_sources/labs/Lab 1 - Tutorial.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "# Lab 1: Machine Learning with Python\n",
-    "Joaquin Vanschoren, Pieter Gijsbers, Bilge Celik, Prabhant Singh"
+    "Ahmed Alansari, Pieter Gijsbers, Bilge Celik, Prabhant Singh"
    ]
   },
   {
@@ -745,7 +745,7 @@
    "version": "3.10.10"
   },
   "latex_metadata": {
-   "author": "Joaquin Vanschoren",
+   "author": "Ahmed Alansari",
    "title": "Introduction"
   }
  },
