--- a/_sources/notebooks/07 - Bayesian Learning.ipynb
+++ b/_sources/notebooks/07 - Bayesian Learning.ipynb
@@ -16,7 +16,7 @@
     "# Auto-setup when running on Google Colab\n",
     "import os\n",
     "if 'google.colab' in str(get_ipython()) and not os.path.exists('/content/master'):\n",
-    "    !git clone -q https://github.com/ML-course/master.git /content/master\n",
+    "    !git clone -q https://github.com/ahmed14117/ml_course.git /content/master\n",
     "    !pip --quiet install -r /content/master/requirements_colab.txt\n",
     "    %cd master/notebooks\n",
     "\n",
@@ -47,7 +47,7 @@
     "\n",
     "**Learning in an uncertain world**\n",
     "\n",
-    "Joaquin Vanschoren"
+    "Ahmed Alansari"
    ]
   },
   {
