--- a/_sources/notebooks/Tutorial 3 - Machine Learning in Python.ipynb
+++ b/_sources/notebooks/Tutorial 3 - Machine Learning in Python.ipynb
@@ -27,7 +27,7 @@
    },
    "source": [
     "# Machine Learning in Python\n",
-    "Joaquin Vanschoren, Eindhoven University of Technology"
+    "Ahmed Alansari, Eindhoven University of Technology"
    ]
   },
   {
@@ -1685,7 +1685,7 @@
    "version": "3.9.7"
   },
   "latex_metadata": {
-   "author": "Joaquin Vanschoren",
+   "author": "Ahmed Alansari",
    "title": "Introduction"
   }
  },
