--- a/_sources/02 - Linear Models.ipynb
+++ b/_sources/02 - Linear Models.ipynb
@@ -11,7 +11,7 @@
     "# Lecture 2: Linear models\n",
     "**Basics of modeling, optimization, and regularization**\n",
     "\n",
-    "Joaquin Vanschoren"
+    "Ahmed Alansari"
    ]
   },
   {
@@ -30,7 +30,7 @@
     "# Auto-setup when running on Google Colab\n",
     "import os\n",
     "if 'google.colab' in str(get_ipython()) and not os.path.exists('/content/master'):\n",
-    "    !git clone -q https://github.com/ML-course/master.git /content/master\n",
+    "    !git clone -q https://github.com/ahmed14117/ml_course.git /content/master\n",
     "    !pip --quiet install -r /content/master/requirements_colab.txt\n",
     "    %cd master/notebooks\n",
     "\n",
@@ -3478,7 +3478,7 @@
    "version": "3.10.9"
   },
   "latex_metadata": {
-   "author": "Joaquin Vanschoren",
+   "author": "Ahmed Alansari",
    "title": "Introduction"
   }
  },
