--- a/_sources/notebooks/05 - Ensemble Learning.ipynb
+++ b/_sources/notebooks/05 - Ensemble Learning.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "**Crowd intelligence**\n",
     "\n",
-    "Joaquin Vanschoren"
+    "Ahmed Alansari"
    ]
   },
   {
@@ -31,7 +31,7 @@
     "# Auto-setup when running on Google Colab\n",
     "import os\n",
     "if 'google.colab' in str(get_ipython()) and not os.path.exists('/content/master'):\n",
-    "    !git clone -q https://github.com/ML-course/master.git /content/master\n",
+    "    !git clone -q https://github.com/ahmed14117/ml_course.git /content/master\n",
     "    !pip --quiet install -r /content/master/requirements_colab.txt\n",
     "    %cd master/notebooks\n",
     "\n",
