--- a/_sources/notebooks/Tutorial 4 - Decision Trees.ipynb
+++ b/_sources/notebooks/Tutorial 4 - Decision Trees.ipynb
@@ -33,7 +33,7 @@
     "# Auto-setup when running on Google Colab\n",
     "import os\n",
     "if 'google.colab' in str(get_ipython()) and not os.path.exists('/content/master'):\n",
-    "    !git clone -q https://github.com/ML-course/master.git /content/master\n",
+    "    !git clone -q https://github.com/ahmed14117/ml_course.git /content/master\n",
     "    !pip install -rq master/requirements_colab.txt\n",
     "    %cd master/notebooks\n",
     "\n",
