--- a/_sources/labs/Lab 0 - Prerequisites.ipynb
+++ b/_sources/labs/Lab 0 - Prerequisites.ipynb
@@ -166,7 +166,7 @@
     "### An alternative: Google Colab\n",
     "[Google Colab](https://colab.research.google.com/) allows you to run notebooks in your browser without any local installation. It also provides (limited) GPU resources. It is a useful alternative in case you encounter issues with your local installation or don't have it available, or to easily use GPUs.\n",
     "\n",
-    "The [course overview page](https://ml-course.github.io/master/) has buttons to launch all materials in Colab (or Binder), or you can upload the notebooks to Colab yourself.\n",
+    "The [course overview page](https://ahmed14117.github.io/ml_course/) has buttons to launch all materials in Colab (or Binder), or you can upload the notebooks to Colab yourself.\n",
     "\n"
    ]
   }
