--- a/_sources/labs/Lab 3b - Ensembles.ipynb
+++ b/_sources/labs/Lab 3b - Ensembles.ipynb
@@ -202,7 +202,7 @@
    "metadata": {},
    "source": [
     "## Exercise 7: Model calibration\n",
-    "For the trained binary random forest model, plot a calibration curve (see [course notebook](https://ml-course.github.io/engineer/slides_html/03%20-%20Model%20Selection.slides.html#/40)). \n",
+    "For the trained binary random forest model, plot a calibration curve (see [course notebook](https://ahmed14117.github.io/ml_course/04%20-%20Model%20Selection.slides.html#/41)). \n",
     "Next, try to correct for this using Platt Scaling (or sigmoid scaling).\n",
     "\n",
     "Probability calibration should be done on new data not used for model fitting. The class [CalibratedClassifierCV](https://scikit-learn.org/stable/auto_examples/calibration/plot_calibration_curve.html#sphx-glr-auto-examples-calibration-plot-calibration-curve-py) uses a cross-validation generator and estimates for each split the model parameter on the train samples and the calibration of the test samples. The probabilities predicted for the folds are then averaged. Already fitted classifiers can be calibrated by CalibratedClassifierCV via the parameter cv=”prefit”. [Read more](https://scikit-learn.org/stable/modules/calibration.html)"
